--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,12 +2,19 @@
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.isort]
-profile = "black"
+[tool.mypy]
+show_error_context = true
+pretty = true
+show_column_numbers = true
+show_error_codes = true
+exclude = ['docs/']
+
+[tool.mypy-six.moves]
+ignore_missing_imports = true
 
 [tool.poetry]
 name = "volttron-lib-modbustk-driver"
-version = "0.1.0"
+version = "0.0.0"
 description = "ModbusTK Driver supported and maintained by the Volttron team."
 authors = ["Mark Bonicillo <volttron@pnnl.gov>"]
 license = "Apache License 2.0"
@@ -16,16 +23,24 @@ repository = "https://github.com/VOLTTRON/volttron-lib-modbustk-driver"
 homepage = "https://github.com/VOLTTRON/volttron-drivers/volttron-lib-modbustk-driver"
 keywords = []
 packages = [ { include = "volttron", from = "src" } ]
+classifiers = [
+    "Programming Language :: Python :: 3 :: Only",
+    "Intended Audience :: Science/Research",
+    "Intended Audience :: Information Technology",
+    "Intended Audience :: Developers",
+    "Intended Audience :: Other Audience",
+    "License :: OSI Approved :: Apache Software License"
+]
 
 [tool.poetry.dependencies]
 python = ">=3.8,<4.0"
+volttron-lib-base-driver="^0.2.0rc0"
 modbus-tk = "^1.1.2"
 pyserial = "^3.5"
 PyYAML = "^6.0"
-volttron-lib-base-driver = {git = "https://github.com/VOLTTRON/volttron-lib-base-driver.git", branch = "develop"}
 
 [tool.poetry.group.dev.dependencies]
-volttron-testing = "^0.3.1a3"
+volttron-testing = "^0.3.1a9"
 pytest = "^6.2.5"
 pytest-cov = "^3.0.0"
 mock = "^4.0.3"
@@ -34,9 +49,9 @@ yapf = "^0.32.0"
 toml = "^0.10.2"
 mypy = "^0.942"
 coverage = "^6.3.2"
-isort = "^5.10.1"
 
-[tool.poetry.group.documentation.dependencies]
+
+[tool.poetry.group.docs.dependencies]
 Sphinx = "^4.5.0"
 sphinx-rtd-theme = "^1.0.0"
 
