--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,12 +1,19 @@
-name: Run tests
+name: Run Pytests
 
 on:
   push:
-    branches: [main, develop, releases]
-    paths: ['**.py', '**.yml']
+    paths:
+      - '**.py'
+      - '**.toml'
+      - '**.yaml'
+      - '**.yml'
   pull_request:
-    types: [opened, synchronize, reopened]
-    paths: ['**.py']
+    types:
+      - opened
+      - synchronize
+      - reopened
+    paths:
+      - '**.py'
 
 defaults:
   run:
@@ -15,55 +22,68 @@ defaults:
 env:
   LANG: en_US.utf-8
   LC_ALL: en_US.utf-8
+  PYTHON_VERSION: '3.10'
+  PROJECT_NAME: volttron-lib-modbustk-driver
 
 jobs:
 
   run-tests:
-
     strategy:
       matrix:
-        os: [ubuntu-20.04, ubuntu-22.04]
-        python: ['3.8', '3.9', '3.10']
+        os: ["ubuntu-20.04", "ubuntu-22.04"]
+        python: ["3.8", "3.9", "3.10"]
 
     runs-on: ${{ matrix.os }}
 
     steps:
-    - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-    - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-    - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
 
-    - name: Checkout
-      uses: actions/checkout@v3
+      #----------------------------------------------
+      #       check-out repo and set-up python
+      #----------------------------------------------
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python }}
+        id: setup-python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python }}
 
-    #----------------------------------------------
-    #  -----  install & configure poetry  -----
-    #----------------------------------------------
-    - name: Install Poetry
-      uses: snok/install-poetry@v1
-      with:
-        version: 1.2.0b2
-        virtualenvs-create: true
-        virtualenvs-in-project: true
-        installer-parallel: true
+      #----------------------------------------------
+      #  -----  install & configure poetry  -----
+      #----------------------------------------------
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: 1.2.2
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+          installer-parallel: true
 
-    #----------------------------------------------
-    # Setup SSH agent so that we can access Volttron dependencies that are in private repos.
-    #----------------------------------------------
-    - name: Setup SSH agent
-      uses: webfactory/ssh-agent@v0.5.4
-      with:
-        ssh-private-key: ${{ secrets.PRIVATE_SSH_KEY }}
+#      #----------------------------------------------
+#      #       load cached venv if cache exists
+#      #----------------------------------------------
+#      - name: Load cached venv
+#        id: cached-poetry-dependencies
+#        uses: actions/cache@v2.1.7
+#        with:
+#          path: .venv
+#          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
+#      #----------------------------------------------
+#      # install dependencies if cache does not exist
+#      #----------------------------------------------
+#      - name: Install dependencies
+#        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+#        run: poetry install --no-interaction --no-root
 
-    #----------------------------------------------
-    # install your root project, and run tests.
-    #----------------------------------------------
-    - name: Install library and run tests
-      run: |
-        poetry install --no-interaction
-        poetry add --group dev pytest-github-actions-annotate-failures
-        poetry run pytest --cov=src tests/
+      #----------------------------------------------
+      # install your root project, and run tests.
+      #----------------------------------------------
+      - name: Install library and run tests
+        run: |
+          poetry install --no-interaction
+          poetry add --group dev pytest-github-actions-annotate-failures
+          poetry run pytest --cov=src tests/
