--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -4,9 +4,7 @@ on:
   push:
     paths:
       - '**.py'
-      - '**.toml'
-      - '**.yaml'
-      - '**.yml'
+      - 'poetry.yml'
   pull_request:
     types:
       - opened
@@ -14,6 +12,7 @@ on:
       - reopened
     paths:
       - '**.py'
+  workflow_dispatch:
 
 defaults:
   run:
@@ -23,15 +22,14 @@ env:
   LANG: en_US.utf-8
   LC_ALL: en_US.utf-8
   PYTHON_VERSION: '3.10'
-  PROJECT_NAME: volttron-lib-modbustk-driver
 
 jobs:
 
   run-tests:
     strategy:
       matrix:
-        os: [ubuntu-22.04]
-        python: ['3.10', '3.11']
+        os: ["ubuntu-22.04"]
+        python: ["3.10", "3.11"]
 
     runs-on: ${{ matrix.os }}
 
@@ -48,7 +46,7 @@ jobs:
 
       - name: Set up Python ${{ matrix.python }}
         id: setup-python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4.6
         with:
           python-version: ${{ matrix.python }}
 
@@ -58,26 +56,9 @@ jobs:
       - name: Install Poetry
         uses: snok/install-poetry@v1
         with:
-          version: 1.2.2
           virtualenvs-create: true
           virtualenvs-in-project: true
           installer-parallel: true
-
-#      #----------------------------------------------
-#      #       load cached venv if cache exists
-#      #----------------------------------------------
-#      - name: Load cached venv
-#        id: cached-poetry-dependencies
-#        uses: actions/cache@v2.1.7
-#        with:
-#          path: .venv
-#          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
-#      #----------------------------------------------
-#      # install dependencies if cache does not exist
-#      #----------------------------------------------
-#      - name: Install dependencies
-#        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-#        run: poetry install --no-interaction --no-root
 
       #----------------------------------------------
       # install your root project, and run tests.
@@ -85,5 +66,4 @@ jobs:
       - name: Install library and run tests
         run: |
           poetry install --no-interaction
-          poetry add --group dev pytest-github-actions-annotate-failures
-          poetry run pytest --cov=src tests/
+          poetry run pytest
