--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,9 +33,8 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.10,<4.0"
-volttron-lib-base-driver="^0.2.0rc0"
-modbus-tk = "^1.1.2"
+python = "^3.10"
+modbus-tk = "^1.1.3"
 pyserial = "^3.5"
 PyYAML = "^6.0"
 
@@ -68,3 +67,18 @@ ignore_patterns = [
     "dist/**",
     "docs/**"
 ]
+
+[tool.mypy]
+python_version = 3.10
+show_error_context = true
+pretty = true
+show_column_numbers = true
+warn_return_any = true
+warn_unused_configs = true
+
+[[tool.mypy.overrides]]
+module = [
+    "yaml",
+    "six"
+]
+ignore_missing_imports = true
