--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ python = "^3.10"
 modbus-tk = "^1.1.3"
 pyserial = "^3.5"
 PyYAML = "^6.0"
+volttron-lib-base-driver = "^0.2.1rc2"
 
 [tool.poetry.group.dev.dependencies]
 volttron-testing = "^0.3.1a9"
